--- a/public/wxstyle/css/main.css
+++ b/public/wxstyle/css/main.css
@@ -1,4 +1,5 @@
-.mui-bar {
+.mui-bar,
+#couponInfo .mui-table-view-cell.mui-active {
   background-color: #ed2a7a;
 }
 .mui-title,
@@ -112,4 +113,58 @@ aside .nav-title {
 .coupon-info-footer-code {
   background-color: #ed2a7a;
   border-top: 2px solid #ed2a7a;
+}
+
+.dialogue-div-time {
+  text-align: center;
+  margin: 10px 0px 5px;
+  color: #555555;
+  font-size: 14px;
+}
+.dialogue-head {
+  padding: 3px 3px 3px 5px;
+}
+.dialogue-head img {
+  border-radius: 20px;
+  height: 40px;
+}
+.dialogue-img {
+  position: relative;
+  background-color: #FFFFFF;
+  min-height: 40px;
+  padding: 5px;
+  border-radius: 10px;
+  margin-bottom: 10px;
+}
+.dialogue-div-img {
+  text-align: center;
+  padding: 5px;
+}
+.dialogue-div-img img {
+  width: 100%;
+}
+.dialogue-div-text {
+  position: relative;
+  background-color: #FFFFFF;
+  min-height: 40px;
+  padding: 5px;
+  border-radius: 10px;
+}
+.dialogue-div-text p {
+  padding: 5px 5px 15px 5px;
+  font-size: 14px;
+  margin-bottom: -10px;
+}
+.dialogue-triangle {
+  position: absolute;
+  top: 5px;
+  left: -25px;
+  width: 0px;
+  height: 0px;
+  border-width: 15px;
+  border-style: solid;
+  border-color: transparent #FFFFFF transparent transparent;
+}
+#couponInfo .mui-table-view-cell.mui-active {
+  color: #fff;
 }
