--- a/public/wxstyle/css/main.css
+++ b/public/wxstyle/css/main.css
@@ -74,14 +74,14 @@ aside .nav-title {
   border:1px solid #ed2a7a;
   background: #FFFFFF;
   color: #ed2a7a;
-  padding:5px 0;
+  padding:4px 0 2px;
   font-size: 14px;
 }
 .coupon-take {
   border:1px solid #ed2a7a;
   background: #ed2a7a;
   color:#fff;
-  padding:5px 0;
+  padding:4px 0 2px;
   font-size: 14px;
 }
 .coupon-share-btn {
