在首页增加商品分类列表

--- a/public/wxstyle/css/main.css
+++ b/public/wxstyle/css/main.css
@@ -228,3 +228,7 @@ body #home-index #search-form {
 #search-coupon-category .mui-input-row .mui-input-speech~.mui-icon-speech {
   color: #ed2a7a;
 }
+
+#coupon-category-index ul {
+  background-color: #fff;
+}
