完成无线端查看商品详情 的功能

--- a/public/wxstyle/css/main.css
+++ b/public/wxstyle/css/main.css
@@ -168,6 +168,10 @@ aside .nav-title {
 #couponInfo .mui-table-view-cell.mui-active {
   color: #fff;
 }
+#couponInfo #couponInfoDetails img {
+  width: 100%;
+  margin-top: -6px;
+}
 .category-font-icon {
   color: #ed2a7a;
   font-weight: 400;
